apontamentos do sonarLint